--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </head>
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">Hello From GreenAer!</h1>
+    <h1 class="title">Hello!</h1>
+    <h1 class="title">Welcome to GreenAers first PWA</h1>
   </div>
   <script src="js/main.js"></script>
 </body>
